# ResearchFigureStudio

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.codex-plugin/: plugin.json
benchmarks/: README.md
docs/: Final_target.md  aesthetic_ground_truth_questionnaire.md  architecture.md  coevolution.md  genevolve_reproduction.md  gpt-reproduction-workflow.md  help-wanted.md  judge_model_training_roadmap.md  paper-to-image.md  rebuild-editable.md  workflow.md
examples/: banana_game.md
rfs/: __init__.py  arrow_router.py  asset_generator.py  asset_reviewer.py  cli.py  control_localizer.py  editable_rebuild.py  exporter.py  input_archive.py  input_loader.py  layout_locator.py  layout_planner.py  layout_semantic_planner.py  paper_analyzer.py  paper_to_editable.py  ppt_compiler.py  professional_compiler.py  professional_dsl.py  professional_gap.py  professional_rebuild.py  professional_repair.py  professional_script_planner.py  program_builder.py  prompt_planner.py  rebuild_design_planner.py  rebuild_eval.py  rebuild_preview_renderer.py  rebuild_visual_critic.py  rebuild_vlm_adapters.py  rebuild_vlm_validation.py  reference_analyzer.py  reference_text_extractor.py  semantic_contract.py  stylist.py  text_grouping.py  text_layer.py  text_layer_ownership.py  utils.py  validator.py  visual_critic.py  (+2 more)
scripts/: install-local.ps1  rebuild_autofigure_architecture_ai_assets.py  rebuild_virtual_interview_pipeline_editable.py
tests/: README.md  __init__.py  test_arrow_router.py  test_coevolution.py  test_paper_to_image.py  test_ppt_compiler.py  (+5 more)
(+132 files in other folders)
